--- a/src/server.html
+++ b/src/server.html
@@ -11,10 +11,10 @@
     <table style="width: 98vw; text-align: center; vertical-align: middle;">
         <tr>
             <td style="text-align: right; width:40%">Hostname:</td>
-            <!--<td style="text-align: left"><input id="hostname" type='text' class="login" size="40"
-                    value="archipelago.gg"></td>-->
-            <td style="text-align: left"><input id="hostname" type='text' class="login" size="40" value="localhost">
-            </td>
+            <td style="text-align: left"><input id="hostname" type='text' class="login" size="40"
+                    value="archipelago.gg"></td>
+            <!--<td style="text-align: left"><input id="hostname" type='text' class="login" size="40" value="localhost">
+            </td>-->
         </tr>
         <tr>
             <td style="text-align: right">Port:</td>
@@ -22,16 +22,16 @@
         </tr>
         <tr>
             <td style="text-align: right">Game Name:</td>
-            <!--<td style="text-align: left"><input id="game" type='text' class="login" size="40"
-                    value="Manual_{Game}_{Creator}"></td>-->
             <td style="text-align: left"><input id="game" type='text' class="login" size="40"
-                    value="Manual_SMOFestival"></td>
+                    value="Manual_{Game}_{Creator}"></td>
+            <!--<td style="text-align: left"><input id="game" type='text' class="login" size="40"
+                    value="Manual_SMOFestival"></td>-->
         </tr>
         <tr>
             <td style="text-align: right">Player Name:</td>
-            <!--<td style="text-align: left"><input id="player" type='text' class="login" size="40" value="Player 1">-->
-            <td style="text-align: left"><input id="player" type='text' class="login" size="40" value="REpsilonSMO">
-            </td>
+            <td style="text-align: left"><input id="player" type='text' class="login" size="40" value="Player 1">
+                <!--<td style="text-align: left"><input id="player" type='text' class="login" size="40" value="REpsilonSMO">
+            </td>-->
         </tr>
         <tr>
             <td colspan="2">
