--- a/src/server.html
+++ b/src/server.html
@@ -13,8 +13,8 @@
             <td style="text-align: right; width:40%">Hostname:</td>
             <td style="text-align: left"><input id="hostname" type='text' class="login" size="40"
                     value="archipelago.gg"></td>
-            <!--<td style="text-align: left"><input id="hostname" type='text' class="login" size="40" value="localhost">
-            </td>-->
+            <!--<td style="text-align: left"><input id="hostname" type='text' class="login" size="40" value="localhost">-->
+            </td>
         </tr>
         <tr>
             <td style="text-align: right">Port:</td>
@@ -25,13 +25,14 @@
             <td style="text-align: left"><input id="game" type='text' class="login" size="40"
                     value="Manual_{Game}_{Creator}"></td>
             <!--<td style="text-align: left"><input id="game" type='text' class="login" size="40"
-                    value="Manual_SMOFestival"></td>-->
+                    value="Manual_MarvelSNAP_JHobz"></td>-->
         </tr>
         <tr>
             <td style="text-align: right">Player Name:</td>
-            <td style="text-align: left"><input id="player" type='text' class="login" size="40" value="Player 1">
-                <!--<td style="text-align: left"><input id="player" type='text' class="login" size="40" value="REpsilonSMO">
-            </td>-->
+            <td style="text-align: left">
+                <input id="player" type='text' class="login" size="40" value="Player 1">
+                <!--<input id="player" type='text' class="login" size="40" value="REpsilonSNAP">-->
+            </td>
         </tr>
         <tr>
             <td colspan="2">
