--- a/src/server.html
+++ b/src/server.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <title>Manual Archipelago Web Client</title>
     <link rel="stylesheet" href="style.css">
+    <script src="jszip.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 </head>
 
 <body>
@@ -36,6 +38,11 @@
         </tr>
         <tr>
             <td colspan="2">
+                Load APWorld for Styling & Game Autofill: <input type="file" id="style" name="style">
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
                 <button onclick="connect()" style="width: 300px;">Connect</button>
             </td>
         </tr>
@@ -47,6 +54,18 @@
     </table>
 
     <script>
+        if (sessionStorage.getItem('host')) {
+            document.getElementById('hostname').value = sessionStorage.getItem('host');
+        }
+        if (sessionStorage.getItem('port')) {
+            document.getElementById('port').value = sessionStorage.getItem('port');
+        }
+        if (sessionStorage.getItem('game')) {
+            document.getElementById('game').value = sessionStorage.getItem('game');
+        }
+        if (sessionStorage.getItem('player')) {
+            document.getElementById('player').value = sessionStorage.getItem('player');
+        }
         function connect() {
             var host = document.getElementById('hostname').value;
             var port = document.getElementById('port').value;
@@ -65,13 +84,107 @@
             sessionStorage.setItem('port', port);
             sessionStorage.setItem('game', game);
             sessionStorage.setItem('player', player);
-            sessionStorage.setItem('locations', '');
-            sessionStorage.setItem('uniqueCat', '');
-            sessionStorage.setItem('items', '');
-            sessionStorage.setItem('uniqueItems', '');
+            if (!sessionStorage.getItem('locations')) {
+                sessionStorage.setItem('locations', '');
+            }
+            if (!sessionStorage.getItem('uniqueCat')) {
+                sessionStorage.setItem('uniqueCat', '');
+            }
+            if (!sessionStorage.getItem('items')) {
+                sessionStorage.setItem('items', '');
+            }
+            if (!sessionStorage.getItem('uniqueItems')) {
+                sessionStorage.setItem('uniqueItems', '');
+            }
 
             window.location.href = './index.html'
         }
+
+        //Allow grouping from APWorld
+        $("#style").on("change", function (evt) {
+            var zip = new JSZip();
+
+            zip.loadAsync(this.files[0])
+                .then(function (zip) {
+                    var fileList = [];
+                    for (let [filename, file] of Object.entries(zip.files)) {
+                        fileList.push(filename);
+                    }
+
+                    var rootDir = fileList[0].substring(0, fileList[0].indexOf('/'));
+
+                    const file_locations = zip.file(rootDir + `/data/locations.json`);
+                    const file_items = zip.file(rootDir + `/data/items.json`);
+                    const game_name = zip.file(rootDir + `/data/game.json`);
+
+                    if (game_name) {
+                        game_name.async('string')
+                            .then((content) => {
+                                var gameTemp = JSON.parse(content);
+                                if (gameTemp['creator']) {
+                                    document.getElementById('game').value = "Manual_" + gameTemp['game'] + "_" + gameTemp['creator'];
+                                    document.getElementById('game').disabled = 'true';
+                                }
+                                if (gameTemp['player']) {
+                                    document.getElementById('game').value = "Manual_" + gameTemp['game'] + "_" + gameTemp['player'];
+                                    document.getElementById('game').disabled = 'true';
+                                }
+                            })
+                    }
+
+                    if (file_locations) {
+                        file_locations.async('string')
+                            .then((content) => {
+                                var locationTemp = JSON.parse(content);
+                                var locationsTemp = [];
+                                var uniqueCatTemp = [];
+
+                                for (var i = 0; i < locationTemp.length; i++) {
+                                    locationsTemp.push(locationTemp[i]['category'][0]);
+                                    if (!uniqueCatTemp.includes(locationsTemp[i])) {
+                                        uniqueCatTemp.push(locationsTemp[i]);
+                                    }
+                                }
+
+                                sessionStorage.setItem('locations', locationsTemp);
+                                sessionStorage.setItem('uniqueCat', uniqueCatTemp);
+                            });
+                    } else {
+                        console.log("An error has occurred.")
+                    }
+
+                    if (file_items) {
+                        file_items.async('string')
+                            .then((content) => {
+                                var itemTemp = JSON.parse(content);
+                                var itemsTemp = [];
+                                var uniqueItemTemp = [];
+                                var itemCatCount = [];
+
+                                for (var i = 0; i < itemTemp.length; i++) {
+                                    var itemsMultiTemp = [];
+
+                                    itemCatCount.push(itemTemp[i]['category'].length);
+
+                                    for (var j = 0; j < itemTemp[i]['category'].length; j++) {
+                                        itemsMultiTemp.push(itemTemp[i]['category'][j])
+                                        if (!uniqueItemTemp.includes(itemTemp[i]['category'][j])) {
+                                            uniqueItemTemp.push(itemTemp[i]['category'][j]);
+                                        }
+                                    }
+                                    itemsTemp.push(itemsMultiTemp);
+                                }
+                                itemsTemp.push('Filler');
+                                uniqueItemTemp.push('Filler');
+
+                                sessionStorage.setItem('items', itemsTemp);
+                                sessionStorage.setItem('uniqueItems', uniqueItemTemp);
+                                sessionStorage.setItem('count', itemCatCount);
+                            })
+                    }
+                })
+        })
+
     </script>
 </body>
 
