Changed Filler to No Category

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
                 }
                 itemsList.push(tempList);
             }
-            itemsList.push(["Filler"])
+            itemsList.push(["No Category"])
             catCount.push('1');
         }
         itemsListVar();
