Code Cleanup & Item Prettifiying

--- a/src/server.html
+++ b/src/server.html
@@ -174,8 +174,8 @@
                                     }
                                     itemsTemp.push(itemsMultiTemp);
                                 }
-                                itemsTemp.push('Filler');
-                                uniqueItemTemp.push('Filler');
+                                itemsTemp.push('Game Filler');
+                                uniqueItemTemp.push('Game Filler');
 
                                 sessionStorage.setItem('items', itemsTemp);
                                 sessionStorage.setItem('uniqueItems', uniqueItemTemp);
