--- a/src/index.html
+++ b/src/index.html
@@ -44,349 +44,8 @@
             </td>
         </tr>
     </table>
-    <script>
-        //Arrays for info from server
-        var locationIds = [];
-        var locationNames = [];
-        var itemIds = [];
-        var itemNames = [];
-
-        //Tracking for Async resync
-        var checkedLocations = [];
-
-        //Sorting Arrays
-        var locations = sessionStorage.getItem('locations').split(',');
-        var uniqueCat = sessionStorage.getItem('uniqueCat').split(',');
-        var itemsList = [];
-        var uniqueItems = sessionStorage.getItem('uniqueItems').split(',').sort();
-        var catCount = sessionStorage.getItem('count').split(',');
-
-        function itemsListVar() {
-            var temp = sessionStorage.getItem('items').split(',');
-
-            var k = 0;
-
-            for (var j = 0; j < catCount.length; j++) {
-                var tempList = [];
-                for (var i = 0; i < catCount[j]; i++) {
-                    tempList.push(temp[k])
-                    k += 1;
-                }
-                itemsList.push(tempList);
-            }
-            itemsList.push(["No Category"])
-            catCount.push('1');
-        }
-        itemsListVar();
-
-        function disconnect() {
-            sessionStorage.removeItem('locations', '');
-            sessionStorage.removeItem('uniqueCat', '');
-            sessionStorage.removeItem('items', '');
-            sessionStorage.removeItem('uniqueItems', '');
-
-            window.location.href = './server.html'
-        }
-
-        //Allow grouping from APWorld
-        $("#style").on("change", function (evt) {
-            var zip = new JSZip();
-
-            zip.loadAsync(this.files[0])
-                .then(function (zip) {
-                    var fileList = [];
-                    for (let [filename, file] of Object.entries(zip.files)) {
-                        fileList.push(filename);
-                    }
-
-                    var rootDir = fileList[0].substring(0, fileList[0].indexOf('/'));
-
-                    const file_locations = zip.file(rootDir + `/data/locations.json`);
-                    const file_items = zip.file(rootDir + `/data/items.json`);
-                    if (file_locations) {
-                        file_locations.async('string')
-                            .then((content) => {
-                                var locationTemp = JSON.parse(content);
-                                var locationsTemp = [];
-                                var uniqueCatTemp = [];
-
-                                for (var i = 0; i < locationTemp.length; i++) {
-                                    locationsTemp.push(locationTemp[i]['category'][0]);
-                                    if (!uniqueCatTemp.includes(locationsTemp[i])) {
-                                        uniqueCatTemp.push(locationsTemp[i]);
-                                    }
-                                }
-
-                                sessionStorage.setItem('locations', locationsTemp);
-                                sessionStorage.setItem('uniqueCat', uniqueCatTemp);
-                            });
-                    } else {
-                        console.log("An error has occurred.")
-                    }
-
-                    if (file_items) {
-                        file_items.async('string')
-                            .then((content) => {
-                                var itemTemp = JSON.parse(content);
-                                var itemsTemp = [];
-                                var uniqueItemTemp = [];
-                                var itemCatCount = [];
-
-                                for (var i = 0; i < itemTemp.length; i++) {
-                                    var itemsMultiTemp = [];
-
-                                    itemCatCount.push(itemTemp[i]['category'].length);
-
-                                    for (var j = 0; j < itemTemp[i]['category'].length; j++) {
-                                        itemsMultiTemp.push(itemTemp[i]['category'][j])
-                                        if (!uniqueItemTemp.includes(itemTemp[i]['category'][j])) {
-                                            uniqueItemTemp.push(itemTemp[i]['category'][j]);
-                                        }
-                                    }
-                                    itemsTemp.push(itemsMultiTemp);
-                                }
-                                itemsTemp.push('Filler');
-                                uniqueItemTemp.push('Filler');
-
-                                sessionStorage.setItem('items', itemsTemp);
-                                sessionStorage.setItem('uniqueItems', uniqueItemTemp);
-                                sessionStorage.setItem('count', itemCatCount);
-                            })
-                    }
-                })
-            setTimeout(() => {
-                reload();
-            }, 500);
-        })
-
-        function reload() {
-            window.location.href = './index.html'
-        }
-
-        //Filter Location Scripting
-        function liveSearch() {
-            // Locate the card elements
-            let cards = document.querySelectorAll('.locations')
-            // Locate the search input
-            let search_query = document.getElementById("searchbox").value;
-            // Loop through the cards
-            for (var i = 0; i < cards.length; i++) {
-                // If the text is within the card...
-                if (cards[i].innerText.toLowerCase()
-                    // ...and the text matches the search query...
-                    .includes(search_query.toLowerCase())) {
-                    // ...remove the `.is-hidden` class.
-                    cards[i].classList.remove("is-hidden");
-                } else {
-                    // Otherwise, add the class.
-                    cards[i].classList.add("is-hidden");
-                }
-            }
-        }
-
-        function itemSearch() {
-            // Locate the card elements
-            let cards = document.querySelectorAll('.items')
-            // Locate the search input
-            let search_query = document.getElementById("searchbox2").value;
-            // Loop through the cards
-            for (var i = 0; i < cards.length; i++) {
-                // If the text is within the card...
-                if (cards[i].id.toLowerCase()
-                    // ...and the text matches the search query...
-                    .includes(search_query.toLowerCase())) {
-                    // ...remove the `.is-hidden` class.
-                    cards[i].classList.remove("is-hidden");
-                } else {
-                    // Otherwise, add the class.
-                    cards[i].classList.add("is-hidden");
-                }
-            }
-        }
-    </script>
-    <script type="module">
-        import {
-            Client,
-            ITEMS_HANDLING_FLAGS,
-            SERVER_PACKET_TYPE,
-            CLIENT_PACKET_TYPE,
-            LocationsManager,
-        } from "https://unpkg.com/archipelago.js@1.0.0/dist/archipelago.js";
-
-        // Create a new Archipelago client
-        const client = new Client();
-
-        const connectionInfo = {
-            hostname: sessionStorage.getItem('host'), // Replace with the actual AP server hostname.
-            port: parseInt(sessionStorage.getItem('port')), // Replace with the actual AP server port.
-            game: sessionStorage.getItem('game'), // Replace with the game name for this player.
-            name: sessionStorage.getItem('player'), // Replace with the player slot name.
-            items_handling: ITEMS_HANDLING_FLAGS.REMOTE_ALL,
-            version: {
-                build: 3,
-                major: 0,
-                minor: 4,
-            },
-            tags: ['AP', 'DeathLink', '(WIP)']
-        };
-
-        // Set up event listeners
-        client.addListener(SERVER_PACKET_TYPE.CONNECTED, (packet) => {
-            console.log("Connected to server: ", packet);
-
-            //Get Checked Locations
-            for (var i = 0; i < packet['checked_locations'].length; i++) {
-                checkedLocations.push(packet['checked_locations'][i])
-            }
-        });
-
-        client.addListener(SERVER_PACKET_TYPE.DATA_PACKAGE, (packet) => {
-            //console.log("Locations: ", packet)
-
-            var game = sessionStorage.getItem('game');
-            var i = 0;
-
-            for (i in packet["data"]["games"][game]['location_id_to_name']) {
-                locationNames.push(packet["data"]["games"][game]['location_id_to_name'][i])
-            }
-
-            for (i in packet["data"]["games"][game]['location_name_to_id']) {
-                locationIds.push(packet["data"]["games"][sessionStorage.getItem('game')]['location_name_to_id'][i])
-            }
-
-            for (i in packet["data"]["games"][game]['item_id_to_name']) {
-                itemNames.push(packet["data"]["games"][sessionStorage.getItem('game')]['item_id_to_name'][i])
-            }
-
-            for (i in packet["data"]["games"][game]['item_name_to_id']) {
-                itemIds.push(packet["data"]["games"][sessionStorage.getItem('game')]['item_name_to_id'][i])
-            }
-
-            addToDisplay();
-        })
-
-        function addToDisplay() {
-            var items = document.getElementById('items');
-            var locationsPage = document.getElementById('locations');
-
-            items.innerHTML = '';
-            locationsPage.innerHTML = '';
-
-            if (uniqueItems.length > 1) {
-                for (var j = 0; j < uniqueItems.length; j++) {
-                    if (j == 0) {
-                        items.innerHTML += "<div align='center' class='items' id='" + uniqueItems[j] + "' style='font-weight: bold;'>" + uniqueItems[j] + "</div><br>";
-                    } else {
-                        items.innerHTML += "<br><div align='center' class='items' id='" + uniqueItems[j] + "' style='font-weight: bold;'>" + uniqueItems[j] + "</div><br>";
-                    }
-                    for (var i = 0; i < itemIds.length; i++) {
-                        for (var k = 0; k < catCount[i]; k++) {
-                            if (itemsList[i][k] == uniqueItems[j]) {
-                                items.innerHTML += "<span class='" + itemIds[i] + "2' style='display:none;'><div class='items itemsStyle' id='" + uniqueItems[j] + "' data-id='" + itemIds[i] + "'>" + itemNames[i] + " (<span class='" + itemIds[i] + "'>0</span>)</div></span>";
-                            }
-                        }
-                    }
-                }
-            } else {
-                for (var i = 0; i < itemIds.length; i++) {
-                    items.innerHTML += "<div>" + itemNames[i] + " (<span class='itemCount' id='" + itemIds[i] + "'>0</span>)</div>";
-                }
-            }
-
-            if (uniqueCat.length > 1) {
-                for (var j = 0; j < uniqueCat.length; j++) {
-                    if (j == 0) {
-                        locationsPage.innerHTML += "<div align='center' style='font-weight:bold'>" + uniqueCat[j] + "</div><br>";
-                    } else {
-                        locationsPage.innerHTML += "<br><div align='center' style='font-weight:bold'>" + uniqueCat[j] + "</div><br>";
-                    }
-                    for (var i = 0; i < locationIds.length; i++) {
-                        if (locations[i] == uniqueCat[j]) {
-                            locationsPage.innerHTML += "<div id='" + locationIds[i] + "' data-el='" + locationIds[i] + `' class='locations'>` + locationNames[i] + "</div>";
-                        }
-                    }
-                }
-            } else {
-                for (var i = 0; i < locationIds.length; i++) {
-                    locationsPage.innerHTML += "<div id='" + locationIds[i] + "' data-el='" + locationIds[i] + `' class='locations')">` + locationNames[i] + "</div>";
-                }
-            }
-
-            document.querySelectorAll('.locations').forEach(el => el.addEventListener('click', event => {
-                var name = client.locations.name("Manual_SMOFestival", parseInt(event.target.getAttribute('data-el')));
-                var locationId1 = parseInt(event.target.getAttribute('data-el'));
-                client.locations.check(parseInt(event.target.getAttribute('data-el')));
-                document.getElementById(event.target.getAttribute('data-el')).style.display = 'none';
-            }));
-
-            document.querySelectorAll('.itemsStyle').forEach(el => el.addEventListener('change', event => {
-                var currentID = parseInt(event.target.getAttribute('data-id'));
-                if (currentID != 0) {
-                    document.getElementById(currentID + "2").style.display = 'block'
-                }
-            }))
-        }
-
-        //Mark Received Items
-        client.addListener(SERVER_PACKET_TYPE.RECEIVED_ITEMS, (packet) => {
-            var packetItems = packet.items;
-            console.log(packetItems)
-
-            for (var i = 0; i < packetItems.length; i++) {
-                var receivedItem = packetItems[i]['item'];
-                var receivedLocation = packetItems[i]['location'];
-
-                for (var j = 0; j < document.getElementsByClassName(receivedItem).length; j++) {
-                    var currentCount = parseInt(document.getElementsByClassName(receivedItem)[j].innerHTML);
-                    document.getElementsByClassName(receivedItem)[j].innerHTML = currentCount + 1;
-                    if (receivedItem != 0) {
-                        if (document.getElementsByClassName(receivedItem + "2")[j]) {
-                            document.getElementsByClassName(receivedItem + "2")[j].style.display = 'block'
-                        }
-                    }
-                }
-
-                /*var currentCount = parseInt(document.getElementById(receivedItem).innerHTML);
-                document.getElementById(receivedItem).innerHTML = currentCount + 1;
-                if (receivedItem != 0) {
-                    if (document.getElementById(receivedItem + "2")) {
-                        document.getElementById(receivedItem + "2").style.display = 'block'
-                    }
-                }*/
-
-                if (document.getElementById(receivedLocation)) {
-                    document.getElementById(receivedLocation).style.display = 'none';
-                }
-            }
-            for (var i = 0; i < checkedLocations.length; i++) {
-                var receivedLocation2 = checkedLocations[i];
-                document.getElementById(receivedLocation2).style.display = 'none';
-            }
-        })
-
-        //Chat Log
-        client.addListener(SERVER_PACKET_TYPE.PRINT_JSON, (packet, message) => {
-            var oldmsg = document.getElementById('log').innerHTML;
-            document.getElementById('log').innerHTML = "<li>" + message + "</li>" + oldmsg;
-        });
-
-        // Connect to the Archipelago server
-        client
-            .connect(connectionInfo)
-            .then(() => {
-                console.log("Connected to the server");
-                // You are now connected and authenticated to the server. You can add more code here if need be.
-            })
-            .catch((error) => {
-                console.error("Failed to connect:", error);
-                // Handle the connection error.
-            });
-
-        // Disconnect from the server when unloading window.
-        window.addEventListener("beforeunload", () => {
-            client.disconnect();
-        });
-    </script>
+    <script src="index.js"></script>
+    <script type="module" src="archipelago.js"></script>
 </body>
 
 </html>
