File Reorganization Pt.1

--- a/src/index.html
+++ b/src/index.html
@@ -10,42 +10,50 @@
 </head>
 
 <body>
-    <table style="height: 97vh;">
+    <table style="width: 98vw; text-align: center; vertical-align: middle;">
         <tr>
-            <td style="vertical-align: top; width: 25%">
-                <div id="items"></div>
-            </td>
-            <td style="vertical-align: top; width: 25%">
-                <div id="locations"></div>
-            </td>
-            <td style="vertical-align: top; width: calc(50%);">
-                <div id="log"></div>
+            <td style="text-align: right; width:40%">Hostname:</td>
+            <td style="text-align: left"><input id="hostname" type='text' class="login" size="40"
+                    value="archipelago.gg"></td>
+            <!--<td style="text-align: left"><input id="hostname" type='text' class="login" size="40" value="localhost">-->
             </td>
         </tr>
         <tr>
-            <td colspan="3" align="right" style="height: 100px">
-                Load APWorld for Styling: <input type="file" id="style" name="style">
-                Chat: <input type="text" id="chatBox" style="width: 45%;" placeholder="DISABLED IN THIS BUILD" disabled>
-                <table width="100%">
-                    <tr>
-                        <td style="vertical-align: bottom; width: 25%" align="center">
-                            <label for="searchbox">Filter By Item Category</label><br>
-                            <input type="search" oninput="itemSearch()" id="searchbox2">
-                        </td>
-                        <td style="vertical-align: bottom; width: 25%" align="center">
-                            <label for="searchbox">Filter By Location</label>
-                            <input type="search" oninput="liveSearch()" id="searchbox">
-                        </td>
-                        <td style='vertical-align: bottom; text-align: right; width: 50%;'>
-                            <div><button class="connButton" onclick="disconnect()">Disconnect</button></div>
-                        </td>
-                    </tr>
-                </table>
+            <td style="text-align: right">Port:</td>
+            <td style="text-align: left"><input id="port" type='text' class="login" size="40" value="38281"></td>
+        </tr>
+        <tr>
+            <td style="text-align: right">Game Name:</td>
+            <td style="text-align: left"><input id="game" type='text' class="login" size="40"
+                    value="Manual_{Game}_{Creator}"></td>
+            <!--<td style="text-align: left"><input id="game" type='text' class="login" size="40"
+                    value="Manual_MarvelSNAP_JHobz"></td>-->
+        </tr>
+        <tr>
+            <td style="text-align: right">Player Name:</td>
+            <td style="text-align: left">
+                <input id="player" type='text' class="login" size="40" value="Player 1">
+                <!--<input id="player" type='text' class="login" size="40" value="REpsilonSNAP">-->
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                Load APWorld for Styling & Game Autofill: <input type="file" id="style" name="style">
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <button onclick="connect()" style="width: 300px;">Connect</button>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <div id="err" style="background-color: red;"></div>
             </td>
         </tr>
     </table>
-    <script src="index.js"></script>
-    <script type="module" src="archipelago.js"></script>
+
+    <script src="scripts/login.js"></script>
 </body>
 
 </html>
