Added Versioning to pages

--- a/index.html
+++ b/index.html
@@ -52,7 +52,21 @@
             </td>
         </tr>
     </table>
+    <div style="text-align: center; width: 100%; position:fixed; bottom: 0px;" id="buildText" onclick="changeLog()">
+    </div>
 
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <span id="changelog"></span>
+        </div>
+
+    </div>
+
+    <script src="scripts/build.js"></script>
     <script src="scripts/login.js"></script>
 </body>
 
