--- a/apclient.html
+++ b/apclient.html
@@ -25,7 +25,7 @@
         <tr>
             <td colspan="3" align="right" style="height: 100px">
                 Load APWorld for Styling: <input type="file" id="style" name="style">
-                Chat: <input type="text" id="chatBox" style="width: 45%;" placeholder="DISABLED IN THIS BUILD" disabled>
+                Chat: <input type="text" id="chatBox" style="width: 45%;">
                 <table width="100%">
                     <tr>
                         <td style="vertical-align: bottom; width: 25%" align="center">
