--- a/apclient.html
+++ b/apclient.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <table style="height: 97vh;">
+    <table style="height: 97vh; background-color: rgba(68, 68, 68, 0.76);">
         <tr>
             <td style="vertical-align: top; width: 25%">
                 <div id="items"></div>
@@ -24,7 +24,7 @@
         </tr>
         <tr>
             <td colspan="3" align="right" style="height: 100px">
-                Load APWorld for Styling: <input type="file" id="style" name="style">
+                <!--Load APWorld for Styling: <input type="file" id="style" name="style">-->
                 Chat: <input type="text" id="chatBox" style="width: 45%;">
                 <table width="100%">
                     <tr>
@@ -33,7 +33,7 @@
                             <input type="search" oninput="itemSearch()" id="searchbox2">
                         </td>
                         <td style="vertical-align: bottom; width: 25%" align="center">
-                            <label for="searchbox">Filter By Location</label>
+                            <label for="searchbox">Filter By Location</label><br>
                             <input type="search" oninput="liveSearch()" id="searchbox">
                         </td>
                         <td style='vertical-align: bottom; text-align: right; width: 50%;'>
