--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <tr>
             <td style="text-align: right">Game Name:</td>
             <td style="text-align: left"><input id="game" type='text' class="login" size="40"
-                    value="Manual_{Game}_{Creator}"></td>
+                    value="Manual_{Game}_{Creator}" disabled></td>
             <!--<td style="text-align: left"><input id="game" type='text' class="login" size="40"
                     value="Manual_MarvelSNAP_JHobz"></td>-->
         </tr>
