--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 </head>
 
 <body>
+    <div class="loginTitle">
+        <h1>MANUAL ARCHIPELAGO WEB CLIENT</h1>
+    </div>
     <table style="width: 98vw; text-align: center; vertical-align: middle;">
         <tr>
             <td>
-                <table style="background-color: rgba(68, 68, 68, 0.76); text-align: center; padding: 20px;"
+                <table
+                    style="background-color: rgba(68, 68, 68, 0.76); text-align: center; padding: 20px; border-radius: 25px; border: 2px solid white;"
                     align="center">
                     <tr>
                         <td style="text-align: right; width:40%">Hostname:</td>
