--- a/apclient.html
+++ b/apclient.html
@@ -14,7 +14,7 @@
         <h1>MANUAL ARCHIPELAGO WEB CLIENT</h1>
     </div>
     <table
-        style="height: calc(97vh - 150px); background-color: rgba(68, 68, 68, 0.76); text-align: center; padding: 20px; border-radius: 25px; border: 2px solid white;">
+        style="height: calc(97vh - 150px); background-color: rgba(68, 68, 68, 0.76); padding: 20px; border-radius: 25px; border: 2px solid white;">
         <tr>
             <td style="vertical-align: top; width: 25%">
                 <div id="items"></div>
