--- a/index.html
+++ b/index.html
@@ -46,12 +46,33 @@
                         </td>
                     </tr>
                     <tr>
+                        <td style="text-align: right">Custom Background:</td>
+                        <td style="text-align: left">
+                            <div class="tooltip">
+                                <input id="bckgrnd" type='radio' class="login" name='bckgrnd' value="yes" checked> Yes
+                                <input id="bckgrnd" type='radio' class="login" name="bckgrnd" value="no"> No
+                                <span class="tooltiptext">Only works if the apworld's game.json has "background-image"
+                                    defined as a URL.<br><br>Currently, not supported. Use with caution.</span>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            &nbsp;
+                        </td>
+                    </tr>
+                    <tr>
                         <td colspan="2">
                             Load APWorld for Styling & Game Autofill<br>
                             From Local File: <input type="file" id="style" name="style"><br>
                             <!--From URL: <input type="text" id="styleURL" name="styleURL"><button
                                 onclick="loadFromURL()">Load From
                                 URL</button>--><!-- Revisit Later -->
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            &nbsp;
                         </td>
                     </tr>
                     <tr>
