--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                     align="center">
                     <tr>
                         <td style="text-align: right; width:40%">Hostname:</td>
+                        <!--<td style="text-align: left"><input id="hostname" type='text' class="login" size="40"
+                                value="archipelago.gg"></td>-->
                         <td style="text-align: left"><input id="hostname" type='text' class="login" size="40"
-                                value="archipelago.gg"></td>
-                        <!--<td style="text-align: left"><input id="hostname" type='text' class="login" size="40" value="localhost">-->
+                                value="localhost">
                     </tr>
                     <tr>
                         <td style="text-align: right">Port:</td>
@@ -35,17 +36,14 @@
                         <td style="text-align: right">Game Name:</td>
                         <td style="text-align: left"><input id="game" type='text' class="login" size="40"
                                 value="Manual_{Game}_{Creator}" disabled></td>
-                        <!--<td style="text-align: left"><input id="game" type='text' class="login" size="40"
-                                value="Manual_MarvelSNAP_JHobz"></td>-->
                     </tr>
                     <tr>
                         <td style="text-align: right">Player Name:</td>
                         <td style="text-align: left">
-                            <input id="player" type='text' class="login" size="40" value="Player 1">
-                            <!--<input id="player" type='text' class="login" size="40" value="REpsilonSNAP">-->
+                            <input id="player" type='text' class="login" size="40" value="Player 1" disabled>
                         </td>
                     </tr>
-                    <tr>
+                    <!--<tr>
                         <td style="text-align: right">Custom Background:</td>
                         <td style="text-align: left">
                             <div class="tooltip">
@@ -55,7 +53,7 @@
                                     defined as a URL.<br><br>Currently, not supported. Use with caution.</span>
                             </div>
                         </td>
-                    </tr>
+                    </tr>-->
                     <tr>
                         <td colspan="2">
                             &nbsp;
@@ -63,7 +61,9 @@
                     </tr>
                     <tr>
                         <td colspan="2">
-                            Load APWorld for Styling & Game Autofill<br>
+                            Load APMANUAL for Styling & Game Autofill<br>
+                            <span style="font-size: small;">(If you don't have the .APMANUAL file, please
+                                contact the host.)</span><br>
                             From Local File: <input type="file" id="style" name="style"><br>
                             <!--From URL: <input type="text" id="styleURL" name="styleURL"><button
                                 onclick="loadFromURL()">Load From
