--- a/apclient.html
+++ b/apclient.html
@@ -16,15 +16,30 @@
     <table
         style="height: calc(97vh - 150px); background-color: rgba(68, 68, 68, 0.76); padding: 20px; border-radius: 25px; border: 2px solid white;">
         <tr>
-            <td style="vertical-align: top; width: 25%">
-                <div class="checks" id="items"></div>
+            <td style="text-align:center; vertical-align: top; height: 10px; width: 38vw;">
+                <div>Items</div>
             </td>
-            <td style="vertical-align: top; width: 25%">
-                <div class='checks' id="locations"></div>
+            <td style="text-align:center; vertical-align: top; height: 10px; width: 38vw;">
+                <div>Locations</div>
+            </td>
+            <td style="text-align:center; vertical-align: top; height: 10px; width: 20vw;">
+                <!--onclick="showHide('hints')"-->
+                <div>Hints</div>
             </td>
         </tr>
         <tr>
-            <td colspan="2" style="vertical-align: top;">
+            <td style="vertical-align: top; width: 38vw;">
+                <div class="checks" id="items"></div>
+            </td>
+            <td style="vertical-align: top; width: 38vw;">
+                <div class='checks' id="locations"></div>
+            </td>
+            <td style="vertical-align: top; width: 20vw;">
+                <div id='hints'></div>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="3" style="vertical-align: top; width: 100%;">
                 <div id="log"></div>
             </td>
         </tr>
