--- a/apclient.html
+++ b/apclient.html
@@ -47,10 +47,6 @@
             <td colspan="3" align="right" style="height: 100px">
                 <table width="100%">
                     <tr>
-                        <!--<td style="vertical-align: bottom; width: 25%" align="center">
-                            <label for="searchbox">Filter By Item Category</label><br>
-                            <input type="search" oninput="itemSearch()" id="searchbox2">
-                        </td>-->
                         <td style="vertical-align: bottom; width: 25%" align="center">
                             <label for="searchbox">Filter By Location</label><br>
                             <input type="search" oninput="liveSearch()" id="searchbox">
@@ -59,6 +55,13 @@
                                 id="chatBox" style="width: 100%;"></td>
                         <td style='vertical-align: bottom; text-align: right; width: 25%;'>
                             <div><button class="connButton" onclick="disconnect()">Disconnect</button></div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="3" align="center">
+                            <span style='color:gold'>Progression Item</span> |
+                            <span style='color:lawngreen'>Useful Item</span> |
+                            <span style='color:cornflowerblue'>Filler Item</span>
                         </td>
                     </tr>
                 </table>
