Implemented TextOnly Client

--- a/textclient.html
+++ b/textclient.html
@@ -14,9 +14,15 @@
         <div class="textTitle">MANUAL ARCHIPELAGO WEB CLIENT</div>
     </div>
     <table
-        style="height: calc(97vh - 150px); background-color: rgba(68, 68, 68, 0.76); padding: 20px; border-radius: 25px; border: 2px solid white;">
+        style="height: calc(97vh - 150px); background-color: rgba(68, 68, 68, 0.76); padding: 20px; border-radius: 25px; border: 2px solid white;"
+        width="100%">
         <tr>
             <td colspan="3" style="vertical-align: top; width: 100%;">
+                <div align="center">
+                    <span style='color:gold'>Progression Item</span> |
+                    <span style='color:lawngreen'>Useful Item</span> |
+                    <span style='color:cornflowerblue'>Filler Item</span>
+                </div>
                 <div id="log"></div>
             </td>
         </tr>
