Fixed issue where client wouldn't load properly

--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
                         <td style="text-align: right">Connection Style:</td>
                         <td style="text-align: left;">
                             <div class="tooltip">
-                                <input id="style" type='radio' class="login" name='style' value="manual" checked> Manual
+                                <input id="clientType" type='radio' class="login" name='clientType' value="manual"
+                                    checked> Manual
                                 AP
-                                <input id="style" type='radio' class="login" name="style" value="text"> Text Only
+                                <input id="clientType" type='radio' class="login" name="clientType" value="text"> Text
+                                Only
                                 <span class="tooltiptext">Decide if you are joining a game or viewing text only.</span>
                             </div>
                         </td>
