Bug Fixes & Hint coloring

--- a/textclient.html
+++ b/textclient.html
@@ -21,6 +21,7 @@
                 <div align="center">
                     <span style='color:gold'>Progression Item</span> |
                     <span style='color:lawngreen'>Useful Item</span> |
+                    <span style="color: lightcoral;">Trap Item</span> |
                     <span style='color:cornflowerblue'>Filler Item</span>
                 </div>
                 <div id="log"></div>
