--- a/apclient.html
+++ b/apclient.html
@@ -61,6 +61,7 @@
                         <td colspan="3" align="center">
                             <span style='color:gold'>Progression Item</span> |
                             <span style='color:lawngreen'>Useful Item</span> |
+                            <span style="color: lightcoral;">Trap Item</span> |
                             <span style='color:cornflowerblue'>Filler Item</span>
                         </td>
                     </tr>
