Changed to show proper server name not localhost

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     align="center">
                     <tr>
                         <td style="text-align: right; width:40%">Hostname:</td>
-                        <!--<td style="text-align: left"><input id="hostname" type='text' class="login" size="40"
-                                value="archipelago.gg"></td>-->
                         <td style="text-align: left"><input id="hostname" type='text' class="login" size="40"
-                                value="localhost">
+                                value="archipelago.gg"></td>
+                        <!--<td style="text-align: left"><input id="hostname" type='text' class="login" size="40"
+                                value="localhost">-->
                     </tr>
                     <tr>
                         <td style="text-align: right">Port:</td>
