--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
                             <input id="player" type='text' class="login" size="40" value="Player 1" disabled>
                         </td>
                     </tr>
-                    <!--<tr>
-                        <td style="text-align: right">Custom Background:</td>
+                    <tr>
+                        <td style="text-align: right">DeathLink?</td>
                         <td style="text-align: left">
                             <div class="tooltip">
-                                <input id="bckgrnd" type='radio' class="login" name='bckgrnd' value="yes" checked> Yes
-                                <input id="bckgrnd" type='radio' class="login" name="bckgrnd" value="no"> No
-                                <span class="tooltiptext">Only works if the apworld's game.json has "background-image"
-                                    defined as a URL.<br><br>Currently, not supported. Use with caution.</span>
+                                <input id="deathlink" type='radio' class="login" name='deathlink' value="yes"> Yes
+                                <input id="deathlink" type='radio' class="login" name="deathlink" value="no" checked> No
+                                <span class="tooltiptext">DeathLink is a work in progress for Manuals. You will have to
+                                    kill yourself within your game to complete the link.</span>
                             </div>
                         </td>
-                    </tr>-->
+                    </tr>
                     <tr>
                         <td colspan="2">&nbsp;</td>
                     </tr>
